test/corpus/expressions.txt
==================
Builtin call expression
==================

fn expressions() void {
    const builtin = @as(i32, 1);
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (builtin_function
          (builtin_identifier)
          (arguments
            (builtin_type)
            (integer)))))))

==================
Parenthesized and binary expressions
==================

fn expressions() void {
    const grouped = (1 + 2) * 3;
    const combined = flag and other or third;
    const shifted = bits << 2;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (integer)
              (integer)))
          (integer)))
      (local_variable_declaration
        (identifier)
        (binary_expression
          (binary_expression
            (identifier)
            (identifier))
          (identifier)))
      (local_variable_declaration
        (identifier)
        (binary_expression
          (identifier)
          (integer))))))

==================
Unary expressions
==================

fn expressions() void {
    const negated = -value;
    const inverted = ~mask;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (unary_expression
          (identifier)))
      (local_variable_declaration
        (identifier)
        (unary_expression
          (identifier))))))

==================
Call field index and postfix expressions
==================

fn expressions() void {
    const call = foo(bar, 1);
    const member = call.items[0..].field.*.?;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (identifier)
            (integer))))
      (local_variable_declaration
        (identifier)
        (null_coercion_expression
          (dereference_expression
            (field_expression
              (index_expression
                (field_expression
                  (identifier)
                  (identifier))
                (range_expression
                  (integer)))
              (identifier))))))))

==================
Range expressions
==================

fn expressions(items: []u8, start: usize, end: usize, sentinel: u8) void {
    const closed = items[start..end];
    const open = items[start..];
    const sentineled = items[start..end :sentinel];
    for (0..end, items) |i, item| {}
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (slice_type
          (builtin_type)))
      (parameter
        (identifier)
        (builtin_type))
      (parameter
        (identifier)
        (builtin_type))
      (parameter
        (identifier)
        (builtin_type)))
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (index_expression
          (identifier)
          (range_expression
            (identifier)
            (identifier))))
      (local_variable_declaration
        (identifier)
        (index_expression
          (identifier)
          (range_expression
            (identifier))))
      (local_variable_declaration
        (identifier)
        (index_expression
          (identifier)
          (range_expression
            (identifier)
            (identifier))
          (identifier)))
      (for_statement
        (range_expression
          (integer)
          (identifier))
        (identifier)
        (payload
          (identifier)
          (identifier))
        (block)))))

==================
Switch expression with range
==================

fn expressions(tag: u8) void {
    switch (tag) { 1...3 => {}, else => {} }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (builtin_type)))
    (builtin_type)
    (block
      (switch_expression
        (identifier)
        (switch_case
          (integer)
          (integer)
          (block))
        (switch_case
          (block))))))

==================
Error and fallible expressions
==================

fn expressions() void {
    const err = error.NotFound;
    const recovered = fallible() catch |e| 0;
    const tried = try fallible();
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (error_type
          (identifier)))
      (local_variable_declaration
        (identifier)
        (catch_expression
          (call_expression
            (identifier)
            (arguments))
          (payload
            (identifier))
          (integer)))
      (local_variable_declaration
        (identifier)
        (try_expression
          (call_expression
            (identifier)
            (arguments)))))))

==================
Await call, nosuspend, and comptime expressions
==================

fn expressions(frame: anyframe) void {
    const done = await(ev, future, result, result_alignment);
    const quiet = nosuspend frame;
    const comp = comptime @as(u8, 1);
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)))
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (identifier)
            (identifier)
            (identifier)
            (identifier))))
      (local_variable_declaration
        (identifier)
        (nosuspend_expression
          (identifier)))
      (local_variable_declaration
        (identifier)
        (comptime_expression
          (builtin_function
            (builtin_identifier)
            (arguments
              (builtin_type)
              (integer))))))))

==================
For and while expressions
==================

fn expressions(items: []const i32) void {
    const picked = for (items) |item| item else 0;
    const waited = while (next()) |item| item else 0;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (slice_type
          (builtin_type))))
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (for_expression
          (identifier)
          (payload
            (identifier))
          (identifier)
          (integer)))
      (local_variable_declaration
        (identifier)
        (while_expression
          (call_expression
            (identifier)
            (arguments))
          (payload
            (identifier))
          (identifier)
          (integer))))))

==================
Labeled type expression
==================

fn expressions() void {
    const lab = label: { break :label 1; };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (labeled_type_expression
          (block_label
            (identifier))
          (block
            (expression_statement
              (break_expression
                (break_label
                  (identifier))
                (integer)))))))))

==================
Literals
==================

// Leading comments are named extras.
fn expressions() void {
    const yes = true;
    const pi = 3.14;
    const letter = 'a';
    const newline = '\n';
    const quote = "a\n{b}";
    const multi =
        \\hello
        \\world
    ;
}

---

(source_file
  (comment)
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (local_variable_declaration
        (identifier)
        (boolean))
      (local_variable_declaration
        (identifier)
        (float))
      (local_variable_declaration
        (identifier)
        (character
          (character_content)))
      (local_variable_declaration
        (identifier)
        (character
          (escape_sequence)))
      (local_variable_declaration
        (identifier)
        (string
          (string_content)
          (escape_sequence)
          (string_content)))
      (local_variable_declaration
        (identifier)
        (multiline_string)))))

==================
Asm expression
==================

fn expressions(code: usize) void {
    asm volatile ("syscall" : [ret] "={rax}" (-> usize) : [number] "{rax}" (code) : .{ .rcx = true, .r11 = true });
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (builtin_type)))
    (builtin_type)
    (block
      (expression_statement
        (asm_expression
          (string
            (string_content))
          (asm_output
            (asm_output_item
              (identifier)
              (string
                (string_content))
              (builtin_type))
            (asm_input
              (asm_input_item
                (identifier)
                (string
                  (string_content))
                (identifier))
              (asm_clobbers
                (literal_struct_value
                  (pair
                    (identifier)
                    (boolean))
                  (pair
                    (identifier)
                    (boolean)))))))))))

====================
Errdefer Expression
====================

fn finalize() (OOM || std.Io.Writer.Error)!void {
    errdefer builder.finalize_failed = true;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (error_union_type
      (parenthesized_expression
        (binary_expression
          (identifier)
          (field_expression
            (field_expression
              (field_expression
                (identifier)
                (identifier))
              (identifier))
            (identifier))))
      (builtin_type))
    (block
      (errdefer_statement
        (assignment_statement
          (field_expression
            (identifier)
            (identifier))
          (boolean))))))

====================
If Suffix Else Suffix
====================

var differ = if (T == u8) BytesDiffer{
    .terminal_mode = terminal_mode,
} else SliceDiffer(T){
    .terminal_mode = terminal_mode,
};

---

(source_file
  (variable_declaration
    (identifier)
    (if_expression
      (binary_expression
        (identifier)
        (builtin_type))
      (struct_initializer
        (identifier)
        (initializer_list
          (pair
            (identifier)
            (identifier))))
      (struct_initializer
        (call_expression
          (identifier)
          (arguments
            (identifier)))
        (initializer_list
          (pair
            (identifier)
            (identifier)))))))

====================
Default struct value expression
====================

fn expressions() void {
    value = .{};
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (assignment_statement
        (identifier)
        (default_struct_value)))))
