test/corpus/statements.txt
==================
Comptime statements
==================

fn statements() void {
    comptime {
        var a = 0;
    }

    comptime var b = 1;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (comptime_statement
        (block
          (local_variable_declaration
            (identifier)
            (integer))))
      (comptime_statement
        (local_variable_declaration
          (identifier)
          (integer))))))

==================
Defer statements
==================

fn statements() void {
    defer cleanup();
    errdefer |err| handle(err);
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (defer_statement
        (expression_statement
          (call_expression
            (identifier)
            (arguments))))
      (errdefer_statement
        (payload
          (identifier))
        (expression_statement
          (call_expression
            (identifier)
            (arguments
              (identifier))))))))

==================
Suspend statements
==================

fn statements() void {
    suspend {}
    nosuspend {
        resume frame;
    }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (suspend_statement
        (block))
      (nosuspend_statement
        (block
          (expression_statement
            (resume_expression
              (identifier))))))))

==================
While statement
==================

fn statements() void {
    outer: while (next()) |value| : (step()) {
        if (value > 10) {
            break :outer value;
        } else {
            continue :outer 1;
        }
    }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (labeled_statement
        (block_label
          (identifier))
        (while_statement
          (call_expression
            (identifier)
            (arguments))
          (payload
            (identifier))
          (call_expression
            (identifier)
            (arguments))
          (block_expression
            (block
              (if_statement
                (binary_expression
                  (identifier)
                  (integer))
                (block_expression
                  (block
                    (expression_statement
                      (break_expression
                        (break_label
                          (identifier))
                        (identifier)))))
                (else_clause
                  (labeled_statement
                    (block
                      (expression_statement
                        (continue_expression
                          (break_label
                            (identifier))
                          (integer))))))))))))))

==================
For statement
==================

fn statements(xs: []const i32) void {
    inline for (xs, 0..) |item, index| {
        _ = item + index;
    } else {}
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (slice_type
          (builtin_type))))
    (builtin_type)
    (block
      (labeled_statement
        (for_statement
          (identifier)
          (range_expression
            (integer))
          (payload
            (identifier)
            (identifier))
          (block_expression
            (block
              (assignment_statement
                (identifier)
                (binary_expression
                  (identifier)
                  (identifier)))))
          (else_clause
            (labeled_statement
              (block))))))))

==================
Labeled block statement
==================

fn statements(maybe: ?i32) void {
    label: {
        const local = if (maybe) |v| v else 0;
    }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (nullable_type
          (builtin_type))))
    (builtin_type)
    (block
      (labeled_statement
        (block_label
          (identifier))
        (block
          (local_variable_declaration
            (identifier)
            (if_expression
              (identifier)
              (payload
                (identifier))
              (identifier)
              (integer))))))))

==================
Switch statement expression
==================

fn statements(b: i32) void {
    switch (b) {
        0, 1...3 => |case| case,
        inline 4 => 4,
        else => 0,
    };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (builtin_type)))
    (builtin_type)
    (block
      (expression_statement
        (switch_expression
          (identifier)
          (switch_case
            (integer)
            (integer)
            (integer)
            (payload
              (identifier))
            (identifier))
          (switch_case
            (integer)
            (integer))
          (switch_case
            (integer)))))))
